--- a/cell01/ex01/piscineweb.html
+++ b/cell01/ex01/piscineweb.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title>Piscine Web</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Piscine Web</h1>
