--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -2,7 +2,18 @@
 <html>
 <head>
     <title>Piscine Web</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        h1 {
+        text-align: center;
+        }
+        img {
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+        border: 2px solid black;
+        margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Piscine Web</h1>
