--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -2,13 +2,23 @@
 <html>
 <head>
     <title>Piscine Web</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        h1 {
+        text-align: center;
+        }
+
+        img {
+        max-width: 400px;
+        height: auto;
+        border: 2px solid black; 
+        }
+    </style>
 </head>
 <body>
     <h1>Piscine Web</h1>
     <center>
-        <img src="cat.jpg" alt="Cat">
-        <img src="dog.webp" alt="Dog">
+        <img src="https://t3.ftcdn.net/jpg/02/18/45/30/360_F_218453068_WRjhtH9MzO33Cb19K8acZI2VZvXueQ70.jpg" alt="Cat">
+        <img src="https://www.shutterstock.com/image-photo/cute-corgi-dog-looking-into-600nw-1902575404.jpg" alt="Dog">
     </center>
 </body>
 </html>
