--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -8,8 +8,8 @@
         }
 
         img {
-        max-width: 400px;
-        height: auto;
+        width: 400px;
+        height: 300px;
         border: 2px solid black; 
         }
     </style>
