--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -12,13 +12,14 @@
         height: 300px;
         border: 2px solid black; 
         }
+        
     </style>
 </head>
 <body>
     <h1>Piscine Web</h1>
     <center>
-        <img src="https://t3.ftcdn.net/jpg/02/18/45/30/360_F_218453068_WRjhtH9MzO33Cb19K8acZI2VZvXueQ70.jpg" alt="Cat">
-        <img src="https://www.shutterstock.com/image-photo/cute-corgi-dog-looking-into-600nw-1902575404.jpg" alt="Dog">
+        <img src="https://t3.ftcdn.net/jpg/02/18/45/30/360_F_218453068_WRjhtH9MzO33Cb19K8acZI2VZvXueQ70.jpg">
+        <img src="https://www.shutterstock.com/image-photo/cute-corgi-dog-looking-into-600nw-1902575404.jpg">
     </center>
 </body>
 </html>
