--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -11,16 +11,16 @@
         }
 
         table {
-            border-spacing: 2px; 
+            width: 100%;
+            height: 150px;
+            border-collapse: collapse;
+            table-layout: fixed;
         }
 
         td {
-            width: 450px; 
-            height: 150px;
-            border: 1px solid black;
+            border: 2px solid black;
             vertical-align: middle;
-            font-size: 24px;
-            color: black;
+            font-size: 32px;
         }
 
         .box1 {
