--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="dropdown-content">
-            <a href="https://images.footyroom.com/posts/025a6d03677b69e701bbd438568d2a66/the-ultimate-hamburger">Hamburger</a>
+            <a href="#">Hamburger</a>
             <a href="#">Fried Chicken</a>
             <a href="#">French Fries</a>
             <a href="#">Soft Drink</a>
